--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title> Love Yourself! </title>
   </head>
   <body>
-    <ul class = "nav">
+    <ul class = "navbar-fixed-top nav">
       <li class="li_nav"><a href="index.html">Home</a></li>
       <li class="li_nav"><a href="slide2.html">Mission</a></li>
       <li class="li_nav"><a href="slide3.html">Reason</a></li>
@@ -28,9 +28,10 @@
       <li class="li_nav"><a href="slide5.html">Quote</a></li>
       <li class="li_nav"><a href="slide6.html">BDD</a></li>
       <li class="li_nav"><a href="slide7.html">Tips</a></li>
+      <li class="li_nav"><a href="slide8.html">Camera</a></li>
       <li class="li_nav"><a href="slide9.html">Sources</a></li>
       <li class="li_nav"><a href="slide10.html">About</a></li>
-      <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"></a></li>
+
     </ul>
 
 
@@ -40,10 +41,13 @@
       </button>
     </a>
 
-    <h1> Love Yourself &#9829;</h1>
     <br>
     <br>
-    <h1 class="sub"> Body Positivity <br> Awareness Campaign <h1>
+    <h1> Love Yourself </h1>
+    <img src="logo.png" alt="" id="logo">
+    <br>
+    <br>
+    <h1 class="sub"> Body Positivity Movement <h1>
 
     <!--Script to link jquery.fullPage.js-->
     <script type="text/javascript" src="jquery.fullPage.js"></script>
