--- a/slide2.html
+++ b/slide2.html
@@ -14,7 +14,7 @@
 
   </head>
   <body>
-    <ul class = "nav">
+    <ul class = "navbar-fixed-top nav">
       <li class="li_nav"><a href="index.html">Home</a></li>
       <li class="li_nav"><a href="slide2.html">Mission</a></li>
       <li class="li_nav"><a href="slide3.html">Reason</a></li>
@@ -22,9 +22,9 @@
       <li class="li_nav"><a href="slide5.html">Quote</a></li>
       <li class="li_nav"><a href="slide6.html">BDD</a></li>
       <li class="li_nav"><a href="slide7.html">Tips</a></li>
+      <li class="li_nav"><a href="slide8.html">Camera</a></li>
       <li class="li_nav"><a href="slide9.html">Sources</a></li>
       <li class="li_nav"><a href="slide10.html">About</a></li>
-      <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"></a></li>
     </ul>
 
     <div id="fullpage">
@@ -32,7 +32,9 @@
         <div id="heading">
         <h1>Our Mission</h1>
       </div>
+        <div class="container"
         <img src="" alt="picture of us" width= 450px height= 450px class = "pic">
+      </div>
         <br>
         <br>
         <br>
@@ -41,33 +43,6 @@
         <p> We are a group of high schoolers who feel very passionate about body positivity and loving yourself. As teenagers living in 2017, we have all felt like we aren’t good enough, whether that be in mind or body. <br> By creating this website, we hope to promote body positivity and raise awareness for those who suffer from body image issues. We hope this will inspire others to feel better about who they are and how they look.</p>
       </div>
     </div>
-
-    <ul class = "nav">
-      <li class="li_nav"><a href="index.html">Home</a></li>
-      <li class="li_nav"><a href="slide2.html">Mission</a></li>
-      <li class="li_nav"><a href="slide3.html">Reason</a></li>
-      <li class="li_nav"><a href="slide4.html">Spotlight</a></li>
-      <li class="li_nav"><a href="slide5.html">Quote</a></li>
-      <li class="li_nav"><a href="slide6.html">BDD</a></li>
-      <li class="li_nav"><a href="slide7.html">Tips</a></li>
-      <li class="li_nav"><a href="slide9.html">Sources</a></li>
-      <li class="li_nav"><a href="slide10.html">About</a></li>
-      <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"></a></li>
-    </ul>
-
- <div id="fullpage">
-   <div class="section">
-    <div id="heading">
-    <h1>Our Mission</h1>
-  </div>
-    <img src="" alt="picture of us" width= 450px height= 450px class = "pic">
-
-  </div>
-  <div class="section">
-    <p> We are a group of high schoolers who feel very passionate about body positivity and loving yourself. As teenagers living in 2017, we have all felt like we aren’t good enough, whether that be in mind or body. <br> By creating this website, we hope to promote body positivity and raise awareness for those who suffer from body image issues. We hope this will inspire others to feel better about who they are and how they look.</p>
-  </div>
-</div>
-
 
       <a href="index.html" class="left">
         <button type="button" class="btn btn-default" aria-label="Left Align">
