--- a/slide3.html
+++ b/slide3.html
@@ -18,7 +18,7 @@
 
 <body>
 
-  <ul class = "nav">
+  <ul class = "navbar-fixed-top nav">
         <li class="li_nav"><a href="index.html">Home</a></li>
         <li class="li_nav"><a href="slide2.html">Mission</a></li>
         <li class="li_nav"><a href="slide3.html">Reason</a></li>
@@ -26,19 +26,20 @@
         <li class="li_nav"><a href="slide5.html">Quote</a></li>
         <li class="li_nav"><a href="slide6.html">BDD</a></li>
         <li class="li_nav"><a href="slide7.html">Tips</a></li>
+        <li class="li_nav"><a href="slide8.html">Camera</a></li>
         <li class="li_nav"><a href="slide9.html">Sources</a></li>
         <li class="li_nav"><a href="slide10.html">About</a></li>
-        <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"></a></li>
+
       </ul>
 
 
  <div id="fullpage">
     <div class="section">
       <div class="page">
-      <h1>Why Girls Should Love Themselves</h1>
+      <h1> What Is Body Positivity? </h1>
     </div>
       <div class="container">
-        <img src="Bodypos.jpg" class="rounded mx-auto d-block" alt="campaign picture" height = "360">
+        <img src="Bodypos.jpg" class="rounded mx-auto d-block" alt="campaign picture" height = 450>
       </div>
   </div>
 
