--- a/slide4.html
+++ b/slide4.html
@@ -22,7 +22,7 @@
 
 <body>
 
-  <ul class = "nav">
+  <ul class = "navbar-fixed-top nav">
 
 
     <li class="li_nav"><a href="index.html">Home</a></li>
@@ -32,9 +32,10 @@
     <li class="li_nav"><a href="slide5.html">Quote</a></li>
     <li class="li_nav"><a href="slide6.html">BDD</a></li>
     <li class="li_nav"><a href="slide7.html">Tips</a></li>
+    <li class="li_nav"><a href="slide8.html">Camera</a></li>
     <li class="li_nav"><a href="slide9.html">Sources</a></li>
     <li class="li_nav"><a href="slide10.html">About</a></li>
-    <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"></a></li>
+  
   </ul>
 
 
@@ -42,16 +43,30 @@
   <div class="section">
     <h1>Spotlight Story</h1>
       <div class="container">
-        <img src="demi.jpg" class="rounded mx-auto d-block" alt="campaign picture" width= 400 height = 450 >
+        <img src="demi.jpg" class="rounded mx-auto d-block" alt="campaign picture" width= 400 height = 450 id="demi" >
       </div>
   </div>
 
 <div class="section">
   <p>As a young girl, Demi Lovato found herself unhappy with her body. Even before she became a celebrity she felt insecure about the way her body was changing and had body image issues. Lovato believed she was “too big” and began purging. She did not like the way she looked because her body was different from the celebrities she would see on TV and magazines.</p>
+
+    <table><tr><td>
+    <img src="http://images4.fanpop.com/image/photos/19200000/Demi-Lovato-Sonny-With-A-Chance-Season-2-promoshoot-2010-anichu90-19213585-374-500.jpg" width= 300px height= 350px id="sonny">
+    </td><td>
+      <img src="https://upload.wikimedia.org/wikipedia/en/b/bf/This_Is_Me_%28Camp_Rock_song%29.jpg" width= 300px height= 350px id="camprock">
+    </td><td>
+    <img src="https://s-media-cache-ak0.pinimg.com/736x/7a/44/10/7a44109a12848e2894810f5524ad50ba--princess-protection-program-demi-lovato.jpg" width = 300px height= 350px id="pp">
+  </td></tr></table>
+
 </div>
 
 <div class="section">
   <p>At the age of 18, she checked herself into rehab because she realized it was not okay for her to feel that way. She was diagnosed with bulimia and bipolar disorder.</p>
+
+  <div class="container" id="video-container">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ZO0DiOUMi04" frameborder="0" align:"middle" allowfullscreen></iframe>
+  </div>
+
 </div>
 
 <div class="section">
