--- a/slide7.html
+++ b/slide7.html
@@ -17,7 +17,7 @@
 
   <body>
 
-    <ul class = "nav">
+    <ul class = "navbar-fixed-top nav">
           <li class="li_nav"><a href="index.html">Home</a></li>
           <li class="li_nav"><a href="slide2.html">Mission</a></li>
           <li class="li_nav"><a href="slide3.html">Reason</a></li>
@@ -25,16 +25,17 @@
           <li class="li_nav"><a href="slide5.html">Quote</a></li>
           <li class="li_nav"><a href="slide6.html">BDD</a></li>
           <li class="li_nav"><a href="slide7.html">Tips</a></li>
+          <li class="li_nav"><a href="slide7.html">Camera</a></li>
           <li class="li_nav"><a href="slide9.html">Sources</a></li>
           <li class="li_nav"><a href="slide10.html">About</a></li>
-          <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"></a></li>
+        
         </ul>
 
 
 
   <div id="fullpage">
   <div class="section">
-    <h1>How to Build <br>Your Confidence</h1>
+    <h1>Building Your Confidence</h1>
 
   </div>
     <div class="section">
@@ -46,7 +47,7 @@
       <p>Wear yellow on days you aren’t feeling confident. Yellow has been shown to improve mood and calm energy.</p>
     </div>
     <div class="section">
-      <img src="https://images.8tracks.com/cover/i/002/305/390/162622236514453278zKRmUiKhc-7235.jpg?rect=0,73,453,453&q=98&fm=jpg&fit=max" alt="singing/dancing in the shower">
+      <img src="https://images.8tracks.com/cover/i/002/305/390/162622236514453278zKRmUiKhc-7235.jpg?rect=0,73,453,453&q=98&fm=jpg&fit=max" alt="singing/dancing in the shower" height=500px width=500px>
       <p>Turn on some fun music - dance and/or sing along. Music can make you feel more powerful, and is heavily linked with mood.</p>
     </div>
     <div class="section">
