--- a/slide5.html
+++ b/slide5.html
@@ -16,7 +16,7 @@
 
   <body>
 
-    <ul class = "nav">
+    <ul class = "navbar-fixed-top nav">
       <li class="li_nav"><a href="index.html">Home</a></li>
       <li class="li_nav"><a href="slide2.html">Mission</a></li>
       <li class="li_nav"><a href="slide3.html">Reason</a></li>
@@ -24,9 +24,10 @@
       <li class="li_nav"><a href="slide5.html">Quote</a></li>
       <li class="li_nav"><a href="slide6.html">BDD</a></li>
       <li class="li_nav"><a href="slide7.html">Tips</a></li>
+      <li class="li_nav"><a href="slide8.html">Camera</a></li>
       <li class="li_nav"><a href="slide9.html">Sources</a></li>
       <li class="li_nav"><a href="slide10.html">About</a></li>
-      <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"<f</a></li>
+    
     </ul>
 
     <div class="container">
