--- a/slide4.html
+++ b/slide4.html
@@ -35,7 +35,7 @@
     <li class="li_nav"><a href="slide8.html">Camera</a></li>
     <li class="li_nav"><a href="slide9.html">Sources</a></li>
     <li class="li_nav"><a href="slide10.html">About</a></li>
-  
+
   </ul>
 
 
@@ -70,7 +70,8 @@
 </div>
 
 <div class="section">
-  <p>Now, Demi Lovato is one of the advocates of body positivity. She encourages women to empower themselves physically, mentally, and spiritually by learning to be grateful for their bodies and taking care of them. Demi Lovato is just one of the many people that struggled with being confident in their bodies and is an example to many young women. If Demi Lovato can do it, so can you!</p>
+  <p id="lastdemi">Now, Demi Lovato encourages women to empower themselves physically, mentally, and spiritually by learning to be grateful for their bodies and taking care of them. Demi Lovato is just one of the many people that struggled with being confident in their bodies and is an example to many young women. If Demi Lovato can do it, so can you!</p>
+  <img src="http://www.billboard.com/files/media/02-demi-lovato-fabletics-collaboration-2017-a-billboard-embed.jpg" width = 300px height = 400px id="demi2017">
 </div>
 
 </div>
