--- a/slide6.html
+++ b/slide6.html
@@ -44,6 +44,7 @@
         <li>Neurobiological factors (ex. malfunctioning of serotonin in the brain)</li>
         <li>Personality traits</li>
         <li>Life experiences</li>
+      <img src="BDD.jpg" width= 200px height= 200 px>
   </div>
 
   <div class="section" id="symptoms">
