--- a/slide7.html
+++ b/slide7.html
@@ -28,7 +28,7 @@
           <li class="li_nav"><a href="slide7.html">Camera</a></li>
           <li class="li_nav"><a href="slide9.html">Sources</a></li>
           <li class="li_nav"><a href="slide10.html">About</a></li>
-        
+
         </ul>
 
 
@@ -36,7 +36,7 @@
   <div id="fullpage">
   <div class="section">
     <h1>Building Your Confidence</h1>
-
+    <img src="https://s-media-cache-ak0.pinimg.com/736x/5e/bd/c6/5ebdc69d6b95cd89f5b80cc58130d339--body-confidence-quotes-confidence-boost.jpg" width=300px height=350px id="main">
   </div>
     <div class="section">
       <img src="http://www.comedycentral.co.uk/sites/default/files/styles/image-w-1200-h-600-scale-crop/public/mtv_uk/arc/2014/05/27/f8bf5a4f-0745-45e6-b57a-3cc95f1bd3cf.jpg?itok=neQ-BYZn" alt="friends">
