--- a/slide5.html
+++ b/slide5.html
@@ -3,6 +3,7 @@
   <head>
 
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Love Yourself - Quote </title>
     <link rel="stylesheet" href="slide5.css">
     <link rel="stylesheet" href="">
@@ -27,11 +28,12 @@
       <li class="li_nav"><a href="slide8.html">Camera</a></li>
       <li class="li_nav"><a href="slide9.html">Sources</a></li>
       <li class="li_nav"><a href="slide10.html">About</a></li>
-    
+
     </ul>
 
     <div class="container">
-      <img src="quote.png" alt="quote">
+      <h1> "Life is way too short to spend another day at war with yourself" </h1>
+      <h2> - Anonymous </h2>
     </div>
 
   <a href="slide4.html" class="left">
