--- a/slide8.html
+++ b/slide8.html
@@ -2,80 +2,40 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Love Yourself - Camera </title>
+    <title>Love Yourself</title>
+    <link rel="stylesheet" href="slide8.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
-    <style>
-
-    body {
-      background-color: #c5b5e1 !important;
-    }
-
-    .li_nav a{
-      font-family: 'Cardo';
-      font-size: 15px;
-      display: block;
-        color: white !important;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-    }
-
-    .li_nav a:hover:not(.active) {
-        background-color: #111;
-        color: #818D92;
-    }
-
-    .nav{
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: #4B3B40;
-    }
-
-    .li_nav{
-      float: left;
-    }
-
-
-    #brand{
-      color: white;
-    }
-  </style>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   </head>
 
   <body>
 
     <ul class = "navbar-fixed-top nav">
-      <li class="li_nav"><a href="index.html">Home</a></li>
-      <li class="li_nav"><a href="slide2.html">Mission</a></li>
-      <li class="li_nav"><a href="slide3.html">Reason</a></li>
-      <li class="li_nav"><a href="slide4.html">Spotlight</a></li>
-      <li class="li_nav"><a href="slide5.html">Quote</a></li>
-      <li class="li_nav"><a href="slide6.html">BDD</a></li>
-      <li class="li_nav"><a href="slide7.html">Tips</a></li>
-      <li class="li_nav"><a href="slide8.html">Camera</a></li>
-      <li class="li_nav"><a href="slide9.html">Sources</a></li>
-      <li class="li_nav"><a href="slide10.html">About</a></li>
-    </ul>
+          <li class="li_nav"><a href="index.html">Home</a></li>
+          <li class="li_nav"><a href="slide2.html">Mission</a></li>
+          <li class="li_nav"><a href="slide3.html">Reason</a></li>
+          <li class="li_nav"><a href="slide4.html">Spotlight</a></li>
+          <li class="li_nav"><a href="slide5.html">Quote</a></li>
+          <li class="li_nav"><a href="slide6.html">BDD</a></li>
+          <li class="li_nav"><a href="slide7.html">Tips</a></li>
+          <li class="li_nav"><a href="slide7.html">Camera</a></li>
+          <li class="li_nav"><a href="slide9.html">Sources</a></li>
+          <li class="li_nav"><a href="slide10.html">About</a></li>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <!--Script to link jquery.fullPage.js-->
-      <script type="text/javascript" src="jquery.fullPage.js"></script>
-      <!--Script for fullpage.js-->
-      <script type="text/javascript">
-        $(document).ready(function() {
-          $('#fullpage').fullpage({
-            bigSectionsDestination: top,
-            controlArrows: false,
-            anchors:['header', 'slide1', 'slide2', 'slide3', 'slide4', 'slide5', 'slide6']});});
-      </script>
+        </ul>
+
+    <iframe src="https://alpha.editor.p5js.org/full/rk9Wyj_O-"></iframe>
+
+    <a href="slide7.html" class="left">
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      </button>
+    </a>
+    <a href="slide9.html" class="right">
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      </button>
+    </a>
 
 
   </body>
