--- a/slide8.html
+++ b/slide8.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="slide8.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
@@ -24,7 +26,9 @@
 
         </ul>
 
-    <iframe src="https://alpha.editor.p5js.org/full/rk9Wyj_O-"></iframe>
+    <h3>Press the "s" key to save your picture!</h3>
+
+    <iframe src="https://alpha.editor.p5js.org/full/rk9Wyj_O-" style="width: 700px; height: 500px;"></iframe>
 
     <a href="slide7.html" class="left">
       <button type="button" class="btn btn-default" aria-label="Left Align">
