--- a/slide5.html
+++ b/slide5.html
@@ -28,12 +28,11 @@
       <li class="li_nav"><a href="slide8.html">Camera</a></li>
       <li class="li_nav"><a href="slide9.html">Sources</a></li>
       <li class="li_nav"><a href="slide10.html">About</a></li>
-
     </ul>
 
     <div class="container">
-      <h1> "Life is way too short to spend another day at war with yourself" </h1>
-      <h2> - Anonymous </h2>
+      <h1><strong>"Life is way too short to spend another day at war with yourself."</strong></h1>
+      <h2><strong> - Anonymous </strong></h2>
     </div>
 
   <a href="slide4.html" class="left">
