--- a/slide2.html
+++ b/slide2.html
@@ -32,8 +32,8 @@
         <div id="heading">
         <h1>Our Mission</h1>
       </div>
-        <div class="container"
-        <img src="" alt="picture of us" width= 450px height= 450px class = "pic">
+        <div class="container">
+        <img src="us.png" alt="picture of us" height= 450px class = "pic">
       </div>
         <br>
         <br>
