--- a/slide6.html
+++ b/slide6.html
@@ -25,7 +25,6 @@
       <li class="li_nav"><a href="slide8.html">Camera</a></li>
       <li class="li_nav"><a href="slide9.html">Sources</a></li>
       <li class="li_nav"><a href="slide10.html">About</a></li>
-      <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"></a></li>
     </ul>
 
 <div id="fullpage">
@@ -69,7 +68,7 @@
     <h3>Treatment</h3>
       <p>Treatment varies depending on the patient. It is important to talk to a doctor or a medical professional in order to determine which form of treatment is best.<br><br>Some  forms of treatment include:</p>
       <div class="list">
-        <li>Cognitive Behavioral Therapy (CBD) - teaches patients to recognize negative thoughts and negative thinking patterns and replace them with positive ones</li>
+        <li>Cognitive Behavioral Therapy (CBT) - teaches patients to recognize negative thoughts and negative thinking patterns and replace them with positive ones</li>
         <li>Medications</li>
         <li>Hospitalization</li>
       </div>
