--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
         $('#fullpage').fullpage({
           bigSectionsDestination: top,
           controlArrows: false,
-          anchors:['header', 'slide1', 'slide2', 'slide3', 'slide4', 'slide5', 'slide6']});});
+          anchors: ['header', 'slide1', 'slide2', 'slide3', 'slide4', 'slide5', 'slide6']
+        });
+      });
     </script>
 
   </body>
