--- a/slide2.html
+++ b/slide2.html
@@ -33,7 +33,7 @@
         <h1>Our Mission</h1>
       </div>
         <div class="container">
-        <img src="us.png" alt="picture of us" height= 450px class = "pic">
+        <img src="media/us.png" alt="picture of us" height= 450px class = "pic">
       </div>
         <br>
         <br>
