--- a/slide4.html
+++ b/slide4.html
@@ -44,7 +44,7 @@
   <div class="section">
     <h1>Spotlight Story</h1>
       <div class="container">
-        <img src="demi.jpg" class="rounded mx-auto d-block" alt="campaign picture" width= 400 height = 450 id="demi" >
+        <img src="media/demi.jpg" class="rounded mx-auto d-block" alt="campaign picture" width= 400 height = 450 id="demi" >
       </div>
   </div>
 
