--- a/slide6.html
+++ b/slide6.html
@@ -46,7 +46,7 @@
           <li>Personality traits</li>
           <li>Life experiences</li>
         </div>
-      <img src="BDD.jpg" style="width:250px;height:250px;">
+      <img src="media/BDD.jpg" style="width:250px;height:250px;">
   </div>
 
   <div class="section">
