--- a/slide7.html
+++ b/slide7.html
@@ -43,7 +43,7 @@
       <p>Connect with others who share the same positive thinking and approach to life. Surround yourself with individuals who share the same values of body positivity and acceptance as you do. Sometimes, connecting with like minds can make you feel accepted in ways you may not have realized before.</p>
     </div>
     <div class="section">
-      <img src="11.jpg" alt="yellow dress">
+      <img src="media/11.jpg" alt="yellow dress">
       <p>Wear yellow on days you aren’t feeling confident. Yellow has been shown to improve mood and calm energy.</p>
     </div>
     <div class="section">
@@ -51,7 +51,7 @@
       <p>Turn on some fun music - dance and/or sing along. Music can make you feel more powerful, and is heavily linked with mood.</p>
     </div>
     <div class="section">
-      <img src="beyonce.jpg" alt="stand tall like beyonce">
+      <img src="media/beyonce.jpg" alt="stand tall like beyonce">
       <p>Stand tall, with your back straight. Posture is an outer sign of confidence, and sometimes, you just have to fake it ‘til you make it.</p>
     </div>
     <div class="section">
