--- a/slide8.html
+++ b/slide8.html
@@ -44,8 +44,8 @@
             <iframe src="https://alpha.editor.p5js.org/full/rk9Wyj_O-" style="width: 700px; height: 500px;"></iframe>
             </div>
           <div class="section">
-            <img src = "1.png" width= 350px height= 300px>
-            <img src = "3.png" width= 350px height= 300px>
+            <img src = "media/1.png" width= 350px height= 300px>
+            <img src = "media/3.png" width= 350px height= 300px>
           </div>
         </div>
 
