--- a/slide9.html
+++ b/slide9.html
@@ -43,21 +43,21 @@
             <div class="col-md-4">
               <div class="thumbnail">
                 <a href="http://www.thebodypositive.org">
-                <img src="thebodypositive.jpg" alt="thebodypositive" style="width:125x;height:125px;" class="fade">
+                <img src="media/thebodypositive.jpg" alt="thebodypositive" style="width:125x;height:125px;" class="fade">
                 </a>
               </div>
             </div>
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="http://dothehotpants.com">
-              <img src="dothehotpants.png" alt="dothehotpants" style="width:125x;height:125px;" class="fade">
+              <img src="media/dothehotpants.png" alt="dothehotpants" style="width:125x;height:125px;" class="fade">
             </a>
           </div>
         </div>
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="http://beautyisboring.com">
-              <img src="beautyisboring.jpg" alt="beautyisboring" style="width:125x;height:125px;" class="fade">
+              <img src="media/beautyisboring.jpg" alt="beautyisboring" style="width:125x;height:125px;" class="fade">
             </a>
           </div>
         </div>
@@ -69,14 +69,14 @@
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="https://www.benourished.org">
-              <img src="benourished.png" alt="benourished" style="width:125x;height:125px;" class="fade">
+              <img src="media/benourished.png" alt="benourished" style="width:125x;height:125px;" class="fade">
             </a>
           </div>
         </div>
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="https://beautyredefined.org">
-              <img src="beautyredefined.png" alt="beautyredefined" style="width:125x;height:125px;" class="fade">
+              <img src="media/beautyredefined.png" alt="beautyredefined" style="width:125x;height:125px;" class="fade">
             </a>
           </div>
         </div>
