--- a/slide10.html
+++ b/slide10.html
@@ -39,7 +39,7 @@
       <h2>Natalie Cohen</h2>
     </div>
     <div class="natalie">
-      <img src="natalie.jpg" class="img-circle" alt="natalie" style="width:200x;height:200px;">
+      <img src="media/natalie.jpg" class="img-circle" alt="natalie" style="width:200x;height:200px;">
     </div>
       <p>I am currently 17 years old and a rising senior attending James Madison High School in Brooklyn. I joined Girls Who Code because I greatly enjoyed the two coding classes I took in school, and wanted to learn more about the subject. The world is moving in the direction of technology, and I wish to be a part of it. I love to read, play video games, hang out with friends, and snack on sweets in my free time, when I’m not stressing out over school. To contact me, click <a href="https://www.linkedin.com/in/natalie-cohen-a86b52145/">here.</a></p>
 
@@ -47,7 +47,7 @@
       <h2>Marisleysis De La Cruz</h2>
     </div>
     <div class="mari">
-      <img src="mari.jpg" class="img-circle" alt="mari" style="width:200px;height:200px;">
+      <img src="media/mari.jpg" class="img-circle" alt="mari" style="width:200px;height:200px;">
     </div>
     <p>I am currently a 15 year old rising junior attending the High School of American Studies at Lehman College in the Bronx. I joined Girls Who Code because of how much my brother enjoyed it. Ever since I was a young girl I liked to work with computers and since my computer always got viruses I would always try to remove them. I chose to do this project because I myself struggled with being body-confident and think it’s important to learn to appreciate your body. To contact me click <a href="https://www.linkedin.com/in/marisleysis-de-la-cruz-354b53145/">here.</a> </p>
 
@@ -55,7 +55,7 @@
       <h2>Kyla Garcia</h2>
     </div>
     <div class="kyla">
-      <img src="kyla.jpg" class="img-circle" alt="kyla" style="width:200px;height:200px;">
+      <img src="media/kyla.jpg" class="img-circle" alt="kyla" style="width:200px;height:200px;">
     </div>
       <p>I am currently 17 years old and attend the High School of American Studies at Lehman College in the Bronx. I joined Girls Who Code because I wanted to explore the different careers within the STEM field. Furthermore, my family is very involved with computers and I wanted to learn more about them. I love drawing, listening to music, cooking, and hanging out with my friends. To contact me click <a href="https://www.linkedin.com/in/kyla-garcia-3a4b53145/">here.</a></p>
 
@@ -63,7 +63,7 @@
       <h2>Drisha Mishra</h2>
     </div>
     <div class="drisha">
-      <img src="drisha.jpg" class="img-circle" alt="drisha" style="width:200px;height:200px;">
+      <img src="media/drisha.jpg" class="img-circle" alt="drisha" style="width:200px;height:200px;">
     </div>
       <p>I am currently 17 years old and a rising senior attending Mount Olive High School in New Jersey. I joined Girls Who Code because I have always been interested in computer science, but never had the mentors or guidance to actually pursue it. I chose to do this project because since I was a little girl I have struggled with my body and loving myself and I believe everyone is special and unique in their own way and should embrace that. To contact me click <a href="https://www.linkedin.com/in/drisha-mishra-863625133/">here.</a></p>
 
