--- a/slide3.html
+++ b/slide3.html
@@ -40,29 +40,29 @@
       <h1> What Is Body Positivity? </h1>
     </div>
       <div class="container">
-        <img src="Bodypos.jpg" class="rounded mx-auto d-block" alt="campaign picture" height = 450>
+        <img src="media/Bodypos.jpg" class="rounded mx-auto d-block" alt="campaign picture" height = 450>
       </div>
   </div>
 
   <div class="section">
     <p> Body positivity is about accepting and loving the body that you are in and accepting that your body may change and that’s okay. As teenage girls we become infatuated with the idea of having the bodies that the celebrities we follow have and forget that our bodies are beautiful too. You do not have to love your body 24/7, but do understand that all bodies are beautiful. </p>
-    <img src="rant.jpg" alt="" id="rant">
+    <img src="media/rant.jpg" alt="" id="rant">
   </div>
 
   <div class="section">
     <p> Your appearance does not define who you are and should not limit what you want to do. It’s important to stop forcing yourself to fit into an impossible cultural standard. Get out there and have fun ! </p>
-    <img src="tie.jpg" alt="" id="tie">
+    <img src="media/tie.jpg" alt="" id="tie">
 
   </div>
 
   <div class="section">
     <p>We are all women and should empower each other not tear each other down. It’s also important to acknowledge that if you are unhealthy or wish to change yourself doesn’t mean that you are not beautiful. Going to the gym is not bad, but it should not be done because you want to look like someone else but rather because you want a healthier and happier lifestyle. </p>
-    <img src="open.jpg" alt="" id="open">
+    <img src="media/open.jpg" alt="" id="open">
   </div>
 
   <div class="section">
     <p>We know that by exploring our website you will not automatically love your body, but we hope it steers you in a journey of self-love.</p>
-    <img src="selflove.jpg" alt="" id="pic">
+    <img src="media/selflove.jpg" alt="" id="pic">
   </div>
 </div>
 
